Fix email confirmation link using container name as host

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,7 @@ EMAIL_PASSWORD=your_email_password_here
 EMAIL_CONFIRM_SUCCESS=https://yourdomain.com/email-confirm-success
 EMAIL_CONFIRM_FAIL=https://yourdomain.com/email-confirm-fail
 PASSWORD_RESET_URL=https://yourdomain.com/password-reset
+AUTH_BASE_URL=http://localhost:9000
 
 # Catalog DB
 CATALOG_DB_USER=your_catalog_db_user
