--- a/services/auth/Auth.Api/appsettings.json
+++ b/services/auth/Auth.Api/appsettings.json
@@ -17,7 +17,8 @@
     "Username": "",
     "Password": ""
   },
-  "RedirectUrl": {
+  "Url": {
+    "ApiBase": "",
     "EmailConfirmSuccess": "",
     "EmailConfirmFail": "",
     "PasswordReset": ""
