Add exclusion for UI components in scan

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -59,6 +59,7 @@ jobs:
           args: >
             -Dsonar.organization=cardosakv
             -Dsonar.projectKey=mercibus_app
+            -Dsonar.exclusions=src/components/ui/**
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_APP }}
           SONAR_HOST_URL: "https://sonarcloud.io"
