--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.66.0",
     "react-router-dom": "^7.9.6",
     "tailwind-merge": "^3.3.1",
@@ -39,6 +40,7 @@
     "@types/node": "^24.10.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
